# tectonic-fault-mesh-tools

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: dev_qa.yml
fault_mesh/: __init__.py
fault_mesh/faults/: connected.py  generic.py  leapfrog.py  mesh.py  opensha_faults.py
fault_mesh/io/: array_operations.py  shapefile_operations.py
fault_mesh/utilities/: contouring.py  cubit.py  cutting.py  graph.py  merging.py  meshing.py  opensha.py  smoothing.py  splines.py
test/: test_dip_direction.py  test_generic_faults.py  test_merging.py
