[project]
name = "fault-mesh"
version = "0.1.0"
description = "Tools for generating depth contour meshes from fault traces."
authors = [
    {name = "Andy Howell", email = "a.howell@gns.cri.nz"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "geopandas (>=1.1.1,<2.0.0)",
    "shapely (>=2.1.2,<3.0.0)"
]

packages = [
    { include = "fault_mesh" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.0,<10.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "pip-audit (>=2.9.0,<3.0.0)",
    "safety (>=3.7.0,<4.0.0)",
    "tox (>=4.32.0,<5.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
